5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4327/executions/1760_674.log
== TEST (2019-05-22 18:59:28) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*
notas = array(eval(input("N:  "))
				  
print(notas)
-- ERROR:
File "XXXX", line 6
    print(notas)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:59:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import
notas = array(eval(input("N:  "))	  
print(nota)
-- ERROR:
File "XXXX", line 3
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:00:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import
n = array(eval(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 3
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:00:40) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import

n = array(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 3
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:00:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import

n = array(eval(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 3
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:04:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array(eval(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:04:34) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array(eval(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:05:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array (eval(input("N:  "))	  

print(n)
-- ERROR:
File "XXXX", line 7
    print(n)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:43) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array (eval(input("N:  "))	  
print(size(n))
print(vec(n))		  
print(n)
-- ERROR:
File "XXXX", line 6
    print(size(n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:34:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array (eval(input("N:  ")):
print(size(n))
print(vec(n))		  
print(n)
-- ERROR:
File "XXXX", line 5
    n = array (eval(input()):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:36:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 
from numpy import*

n = array (eval(input( ["N:  "]))
print(size(n))
print(vec(n))		  
print(n)
-- ERROR:
File "XXXX", line 6
    print(size(n))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
vet = array([3,6,9,12,15])
# Primeiro elemento
print(vet[0])
# Ultimo elemento
print(vet[-1])
# ERRO
print(vet[5])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:22) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *
vet = array([3,6,9,12,15])
# Primeiro elemento
print(vet[0])
# Ultimo elemento
print(vet[-1])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("v: ")
# Primeiro elemento
print(vet[0])
# Ultimo elemento
print(vet[-1])

-- ERROR:
File "XXXX", line 8
    print(vet[0])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:31) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("v: ",8)
# Primeiro elemento
print(vet[0])
# Ultimo elemento
print(vet[-1])

-- ERROR:
File "XXXX", line 8
    print(vet[0])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:38:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("v: ")

-- ERROR:
File "XXXX", line 7
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:45) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet = array(eval(input("v: ")

-- ERROR:
File "XXXX", line 7
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:41:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")

-- ERROR:
File "XXXX", line 7
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:45:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:23) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))
min(vetvet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:48:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))
min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:49:30) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))
min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:50:06) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))
min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:50:58) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))
min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:51:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))

min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:51:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vet= array(eval(input("v: ")))

min(vet)
max(vet)
size(vet)
sum(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-28 02:29:04) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vetor = array(eval(input("Vetor: ")))
m = sum(vetor)/size(vetor)

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-28 02:29:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo 

from numpy import *

vetor = array(eval(input("Vetor: ")))
m = sum(vetor)/size(vetor)

print(size(vetor))
print(vetor[0])
print(vetor[-1])
print(max(vetor))
print(min(vetor))
print(sum(vetor))
print(round(m,2))
-- EXECUTION TIME:
0.989795
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
